language/move-model/tests/sources/pack_err.exp
error:

   ┌── tests/sources/pack_err.move:9:20 ───
   │
 9 │     invariant pack sum = sum + x;
   │                    ^^^ Unexpected 'sum'
   ·
 9 │     invariant pack sum = sum + x;
   │                    --- Expected ';'
   │
